Add Dialog System

--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,4 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 fmod_editor.log
 .idea/.idea.Shubrium_Sib_Jam_2025/.idea/encodings.xml
+Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
