--- a/.gitignore
+++ b/.gitignore
@@ -71,6 +71,6 @@ crashlytics-build.properties
 /[Aa]ssets/[Ss]treamingAssets/aa.meta
 /[Aa]ssets/[Ss]treamingAssets/aa/*
 fmod_editor.log
-.idea/
-.vscode/
+/.idea/
+/.vscode/
 Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
