--- a/.gitignore
+++ b/.gitignore
@@ -76,3 +76,4 @@ crashlytics-build.properties
 fmod_editor.log
 Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
 Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
+/Assets/StreamingAssets/Logs
