--- a/.gitignore
+++ b/.gitignore
@@ -77,3 +77,5 @@ fmod_editor.log
 Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
 Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
 /Assets/StreamingAssets/Logs
+/Build_Shubrium_Sib_Jam_2025
+*.zip
