--- a/.gitignore
+++ b/.gitignore
@@ -79,3 +79,4 @@ Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
 /Assets/StreamingAssets/Logs
 /Build_Shubrium_Sib_Jam_2025
 *.zip
+/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
