--- a/.gitignore
+++ b/.gitignore
@@ -80,3 +80,4 @@ Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
 /Build_Shubrium_Sib_Jam_2025
 *.zip
 /Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
+/Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset.meta
