--- a/.gitignore
+++ b/.gitignore
@@ -81,3 +81,4 @@ Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
 *.zip
 /Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset
 /Assets/Plugins/FMOD/Cache/Editor/FMODStudioCache.asset.meta
+/Build_KoscheisTowerImmortalityProtocol
